--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Planer – zorganizuj swoje życie!{% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset('bundles/app.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -18,6 +19,7 @@
                 © 2018 by <a class="footer__link" href="https://leszcze.gitlab.io/">LESZCZE</a>
             </div>
         </footer>
+        <script src="{{ asset('bundles/app.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
