--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -33,6 +33,13 @@
     <hr>
 
     <div class="card">
+        <h3 class="card__header">Godziny lekcyjne</h3>
+        <a href="{{ path('hours') }}" class="button">Zobacz</a>
+    </div>
+
+    <hr>
+
+    <div class="card">
         <h3 class="card__header">Wspomagacze</h3>
         <a href="https://wulkanowy.github.io" class="button">🌋 Wulkanowy dzienniczek</a>
         <a href="https://github.com/mklkj/medium-volcano#instalacja" class="button">Średni wulkan</a>
