--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
         </main>
         <footer class="footer">
             <div class="footer__content">
-                © 2018 by <a class="footer__link" href="https://leszcze.gitlab.io/">LESZCZE</a>
+                © 2018 by <a class="footer__link" href="https://github.com/mklkj">mklkj</a>
             </div>
         </footer>
         <script src="{{ asset('bundles/app.js') }}"></script>
