--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -4,6 +4,7 @@
 .button {
   display: inline-block;
   padding: 5px 20px;
+  margin: 5px 0;
   text-decoration: none;
   border-radius: 2px;
   background: #fff;
