--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,9 +1,4 @@
-/*!
- * planer
- * Copyright 2018 by mklkj
- */
-
-@import 'reset';
+@import '../../node_modules/normalize.css/normalize.css';
 @import 'variables';
 @import 'scaffolding';
 @import 'typography';
