--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -1,26 +1,29 @@
 // Card
 // ___________________________________________________
 
-.card {
-  background: rgba(255, 255, 255, 0.2);
-  padding: 15px;
+%card {
+  background: $card-background;
+  box-shadow: 0 2px 2px 0 $shadow-color,
+  0 3px 1px -2px $shadow-color,
+  0 1px 5px 0 $shadow-color;
   margin: 20px 0;
-  box-shadow:
-    0 2px 2px 0 rgba(0,0,0, 0.14),
-    0 3px 1px -2px rgba(0,0,0, 0.2),
-    0 1px 5px 0 rgba(0,0,0, 0.12);
+  padding: 15px;
 }
 
-.card__header {
-  font-size: 2.4rem;
-  line-height: 4rem;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
+.card {
+  @extend %card;
 
-.card__info {
-  color: lighten($base-color, 20%);
-  display: block;
-  margin: 0;
-  margin-top: 10px;
+  &__header {
+    font-size: 2.4rem;
+    font-weight: normal;
+    line-height: 4rem;
+    margin-bottom: 10px;
+    margin-top: 0;
+  }
+
+  &__info {
+    color: lighten($base-color, 20%);
+    display: block;
+    margin: 10px 0 0;
+  }
 }
