--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,26 +1,23 @@
-// Header
-// ___________________________________________________
-
 .header {
+  background: $header-background;
+  box-shadow: 0 2px 2px 0 $shadow-color,
+              0 3px 1px -2px $shadow-color,
+              0 1px 5px 0 $shadow-color;
   height: $header-height;
   width: 100%;
-  background: #795548;
-  box-shadow:
-    0 2px 2px 0 rgba(0,0,0, 0.14),
-    0 3px 1px -2px rgba(0,0,0, 0.2),
-    0 1px 5px 0 rgba(0,0,0, 0.12);
-}
 
-.header__title {
-  color: #fff;
-  font-family: 'DejaVu Sans', Arial, sans-serif;
-  font-size: 2rem;
-  margin: 0 20px;
-  line-height: $header-height;
-  letter-spacing: 1px;
+  &__title {
+    color: $header-color;
+    font-family: 'DejaVu Sans', Arial, sans-serif;
+    font-size: 2rem;
+    font-weight: normal;
+    letter-spacing: 1px;
+    line-height: $header-height;
+    margin: 0 20px;
 
-  a {
-    color: inherit;
-    text-decoration: none;
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   }
 }
